[gd_scene load_steps=4 format=3 uid="uid://hi60183p12of"]

[ext_resource type="PackedScene" uid="uid://b2ofrhjbtrwct" path="res://test/quest_graph/QuestEncounterNode.tscn" id="1_ko5o7"]
[ext_resource type="Script" uid="uid://caln3r63va65g" path="res://test/quest_graph/TestQuestEditor.gd" id="1_ut7k4"]
[ext_resource type="PackedScene" uid="uid://smuluikuu7p4" path="res://test/quest_graph/QuestPoiNode.tscn" id="3_k3rps"]

[node name="QuestEditor" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_ut7k4")
quest_node_scene = ExtResource("1_ko5o7")
poi_node_scene = ExtResource("3_k3rps")
save_path = "res://test/quest_graph/"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="AddQuestButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add Quest"

[node name="AddPOIButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add POI"

[node name="DeleteQuestButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Delete Quest"

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save Quests"

[node name="GraphEdit" type="GraphEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
right_disconnects = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddQuestButton" to="." method="_on_add_quest_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddPOIButton" to="." method="_on_add_poi_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DeleteQuestButton" to="." method="_on_delete_quest_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
